added sherlock logo + spell check

--- a/index.html
+++ b/index.html
@@ -136,16 +136,18 @@
 				</div>
 			</div> <!-- col-md-6 author -->
 			<div class="col-md-4 col-md-offset-2">
-				<h3 class="heading wow animated fadeInUp">Repository</h3>
-				<h4 class="subheading muted no-margin wow animated fadeInUp"><a href="http://github.com/leoGalani/sherlock"><i class="fa fa-check-square" aria-hidden="true"></i>
- 				Learn how to download and run Sherlock</a></h4>
+				<img src="img/sherlock.png" style="width: 250px;">
 
-				<h3 class="heading wow animated fadeInUp">Documentation</h3>
-				<h4 class="subheading muted no-margin wow animated fadeInUp"><a href="http://sherlockqa.readthedocs.io"><i class="fa fa-check-square" aria-hidden="true"></i>
+				<h3 class="heading wow animated fadeInUp" style="margin-top: 5px !important;">Repository</h3>
+				<h4 class="subheading muted no-margin wow animated fadeInUp" style="margin-top: 0px !important;"><a href="http://github.com/leoGalani/sherlock"><i class="fa fa-check-square" aria-hidden="true"></i>
+ 				Learn how to run Sherlock</a></h4>
+
+				<h3 class="heading wow animated fadeInUp" style="margin-top: 5px !important;">Documentation</h3>
+				<h4 class="subheading muted no-margin wow animated fadeInUp" style="margin-top: 0px !important;"><a href="http://sherlockqa.readthedocs.io"><i class="fa fa-check-square" aria-hidden="true"></i>
  				Learn how to use and extend</a></h4>
 
-				<h3 class="heading wow animated fadeInUp">Discuss</h3>
-				<h4 class="subheading muted no-margin wow animated fadeInUp"><a href="http://agiletesters.com.br/category/10/sherlock-qa"><i class="fa fa-check-square" aria-hidden="true"></i>
+				<h3 class="heading wow animated fadeInUp" style="margin-top: 5px !important;">Discuss</h3>
+				<h4 class="subheading muted no-margin wow animated fadeInUp" style="margin-top: 0px !important;"><a href="http://agiletesters.com.br/category/10/sherlock-qa"><i class="fa fa-check-square" aria-hidden="true"></i>
  				Get involve on the community</a></h4>
 
 
