small fixes for mobile - features and why to use

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 			</button>
 			<a class="navbar-brand" href="#"><img src="img/sherlock_name.png" alt=""></a>
 		</div>
-
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right main-nav">
@@ -60,7 +59,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<div class="about-info">
-					<img src="img/sherlock_raposa_bored.png">
+					<img src="img/sherlock_raposa_bored.png" style="width: 134%;">
 					</div>
 				</div>
 			<div class="col-md-6">
@@ -92,25 +91,25 @@
 			</div>
 		</div>
 		<div class="row">
-				<div class="col-md-3 feature text-center wow animated fadeInUp" style="width: 24% !important;">
+				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">It's Simple</h4>
 					<i class="fa fa-hand-peace-o fa-3x" aria-hidden="true"></i>
 					<p class="small">Create a project, define your cases and start your cycle. As simple as that.</p>
 				</div>
 
-				<div class="col-md-3 feature text-center wow animated fadeInUp" style="width: 24% !important;">
+				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">Track Progress</h4>
 					<i class="fa fa-area-chart fa-3x" aria-hidden="true"></i>
 					<p class="small">On the project dashboard you can checkout each cycle and it's progress.</p>
 				</div>
 
-				<div class="col-md-3 feature text-center wow animated fadeInUp" style="width: 24% !important;">
+				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">Top Technology</h4>
 					<i class="fa fa-code fa-3x" aria-hidden="true"></i>
 					<p class="small">Sherlock use last and top Technology. Vuejs, Flask, MariaDb and Docker</p>
 				</div>
 
-				<div class="col-md-3 feature text-center wow animated fadeInUp" style="width: 24% !important;">
+				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">It's Free</h4>
 					<span class="fa-stack fa-lg">
 					  <i class="fa fa-usd fa-stack-1x fa-1x"></i>
