--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/et-icons.css">
 	<link rel="stylesheet" type="text/css" href="css/tooltip.css">
 	<link rel="stylesheet" type="text/css" href="css/lightbox.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.css">
 	<link id="main" rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 <body>
@@ -189,18 +190,22 @@
 </footer>
 
 </div>
+<div class="mobile-nav">
+	<ul class="menu">
 
+	</ul>
+</div>
 <script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/owl.carousel.js"></script>
 <script src="js/lightbox.min.js"></script>
 <script src="js/wow.min.js"></script>
 <script src="js/jquery.onepagenav.js"></script>
 <script src="js/core.js"></script>
-<script src="js/jquery.form-validator.js"></script>
 <script src="js/tooltip.js"></script>
+<script src="js/jquery.form-validator.js"></script>
 <script src="js/preloader.js"></script>
 <script src="js/main.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/owl.carousel.js"></script>
 <script src="https://use.fontawesome.com/b3f13e644e.js"></script>
 </body>
 </html>
