--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			<div class="col-md-6 intro-text hidden-sm hidden-xs wow animated fadeInUp">
 				<img src="img/sherlock_name_light.png" alt="">
 				<h2 class="heading">SherlockQA Test Manager</h2>
-				<h4 class="subheading">A simple opensource TestManager for your team.</h4>
-				<p>If your thought that a opensource testmanager needs to be ugly and complicated, think again! Sherlock came to make your life easier as a Tester or Product Owner. And it's as beautiful as it's simple to use. </p>
+				<h4 class="subheading">A simple open source test manager for your team.</h4>
+				<p>If your thought that an open source test manager needs to be ugly and complicated, think again! Sherlock came to make your life easier as a Tester or Product Owner. And it's as beautiful as it's simple to use. </p>
 				<a href="#about" class="scrollto btn btn-white">Why you should I use it?</a>
 			</div>
 	</div>
@@ -64,11 +64,11 @@
 					</div>
 				</div>
 			<div class="col-md-6">
-				<h2 class="heading wow animated fadeInUp">Why use sherlock?</h2>
+				<h2 class="heading wow animated fadeInUp">Why use Sherlock?</h2>
 				<p class="small wow animated fadeInUp">A good test is a automated test, but it's not always possible to automate everything.</p>
-				<p class="small wow animated fadeInUp">Ever project have an suite of regression tests. Some projects have outside hardware depencies and some have tests that are so abstract that is really tricky to automate.</p>
-				<p class="small wow animated fadeInUp">For those cases, until today, you had to pay expensive tools per user and month or use outdate tools that are heavy and hard to use and extend. </p>
-				<p class="small wow animated fadeInUp">Sherlock is a option for those scenarios, as it's a opensource and a free tool that you can use and extend as you need.</p>
+				<p class="small wow animated fadeInUp">Every project have a suite of regression tests. Some projects have outside hardware depencies and some have tests that are so abstract that is really tricky to automate.</p>
+				<p class="small wow animated fadeInUp">For those cases, until today, you had to pay expensive tools per user and month or use outdated tools that are heavy and hard to use and extend. </p>
+				<p class="small wow animated fadeInUp">Sherlock is an option for those scenarios, as it's an open source and a free tool that you can use and extend as you need.</p>
 			</div>
 		</div>
 	</div>
@@ -101,13 +101,13 @@
 				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">Track Progress</h4>
 					<i class="fa fa-area-chart fa-3x" aria-hidden="true"></i>
-					<p class="small">On the project dashboard you can checkout each cycle and it's progress.</p>
+					<p class="small">On the project dashboard, you can check out each cycle and its progress.</p>
 				</div>
 
 				<div class="col-md-3 feature text-center wow animated fadeInUp">
 					<h4 class="subheading feature-name">Top Technology</h4>
 					<i class="fa fa-code fa-3x" aria-hidden="true"></i>
-					<p class="small">Sherlock use last and top Technology. Vuejs, Flask, MariaDb and Docker</p>
+					<p class="small">Sherlock use last and top Technology. Vuejs, Flask, MariaDB and Docker</p>
 				</div>
 
 				<div class="col-md-3 feature text-center wow animated fadeInUp">
@@ -131,7 +131,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="subheading gray wow animated fadeInUp">Sherlock is a part of AgileTesters community and mainly maintained by it's founder, <a href="https://www.linkedin.com/in/leonardogalani/"<b>Leonardo Galani</b> </a>.</h3>
+						<h3 class="subheading gray wow animated fadeInUp">Sherlock is a part of AgileTesters community and mainly maintained by its founder, <a href="https://www.linkedin.com/in/leonardogalani/"<b>Leonardo Galani</b> </a>.</h3>
 					</div>
 				</div>
 			</div> <!-- col-md-6 author -->
@@ -148,9 +148,7 @@
 
 				<h3 class="heading wow animated fadeInUp" style="margin-top: 5px !important;">Discuss</h3>
 				<h4 class="subheading muted no-margin wow animated fadeInUp" style="margin-top: 0px !important;"><a href="http://agiletesters.com.br/category/10/sherlock-qa"><i class="fa fa-check-square" aria-hidden="true"></i>
- 				Get involve on the community</a></h4>
-
-
+ 				Get involve in the community</a></h4>
 			</div>
 		</div>
 	</div>
