--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				<h4 class="subheading white no-margin">You can try SherlockQA out before doing your own setup.</h4>
 			</div>
 			<div class="col-md-4 text-right wow animated fadeInUp text-center-mobile">
-				<a href="http://104.236.221.15/" class="btn btn-white">Live Demo</a>
+				<a href="http://demo.sherlockqa.com/" class="btn btn-white">Live Demo</a>
 			</div>
 		</div>
 	</div>
